--- a/public/src/css/wallet/settings/_generals.scss
+++ b/public/src/css/wallet/settings/_generals.scss
@@ -94,3 +94,33 @@
   }
 }
 
+._3Iet.IhHS{
+  border: 1px solid transparent;
+  border-color: #e5ebee;
+  color: #324c5b;
+  display: flex;
+  width: 100%;
+  border-radius: 4px;
+  align-items: stretch;
+  background-color: #fff;
+  border-radius: 4px;
+
+  ._2ieP{
+    display: flex;
+    align-items: stretch;
+    width: 100%;
+    flex-grow: 1;
+
+    input{
+      width: 100%;
+      padding: 0 8px;
+      background-color: transparent;
+      border: none;
+      font-size: 14px;
+      height: 36px;
+      outline: none;
+      line-height: 36px;
+      transition: color .2s ease-in-out;
+    }
+  }
+}
