--- a/public/src/css/spendee.css
+++ b/public/src/css/spendee.css
@@ -5244,6 +5244,224 @@ nav, ul, ol {
   white-space: nowrap;
   border-radius: 8px !important;
 }
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj ._1KCh {
+  display: none;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou {
+  z-index: 950;
+  transition: z-index 0.35s step-start;
+  position: relative;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._3_OS._1q5Q {
+  display: none;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  border-radius: 5px;
+  background-color: white;
+  text-align: left;
+  position: relative;
+  z-index: 1000;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form {
+  width: 100%;
+  padding: 16px;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form h1 {
+  font-size: 18px;
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 8px;
+  color: #324c5b;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV.IhHS {
+  display: block;
+  position: relative;
+  margin-bottom: 10px;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV.IhHS .BVod {
+  display: flex;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV.IhHS .BVod ._1Baa.inline.IhHS {
+  flex-grow: 1;
+  margin-bottom: 3px;
+  font-size: 12px;
+  color: #7b93a4;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: pointer;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV.IhHS ._3Iet.IhHS {
+  display: flex;
+  width: 100%;
+  border-radius: 4px;
+  align-items: stretch;
+  border: 1px solid transparent;
+  background-color: #fff;
+  border-color: #e5ebee;
+  color: #324c5b;
+  transition: all 0.2s ease-in-out;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV.IhHS ._3Iet.IhHS:hover {
+  border-color: #bbcdd8;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV.IhHS ._3Iet.IhHS ._2ieP {
+  display: flex;
+  align-items: stretch;
+  width: 100%;
+  flex-grow: 1;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV.IhHS ._3Iet.IhHS ._2ieP ._1mYU.required {
+  width: 100%;
+  padding: 0 8px;
+  background-color: transparent;
+  border: none;
+  font-size: 14px;
+  height: 36px;
+  outline: none;
+  line-height: 36px;
+  transition: color 0.2s ease-in-out;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-control {
+  border-radius: 4px;
+  color: #333;
+  cursor: default;
+  display: table;
+  border-spacing: 0;
+  border-collapse: separate;
+  height: 36px;
+  outline: none;
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-control .Select-multi-value-wrapper .Select-value {
+  bottom: 0;
+  color: #324c5b;
+  left: 0;
+  line-height: 38px;
+  padding-left: 10px;
+  padding-right: 10px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-control .Select-multi-value-wrapper .Select-value .Select-value-label {
+  color: #324c5b;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV {
+  margin-bottom: 10px;
+  display: block;
+  position: relative;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV .BVod {
+  display: flex;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV .BVod ._1Baa.inline {
+  flex-grow: 1;
+  margin-bottom: 3px;
+  font-size: 12px;
+  color: #7b93a4;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: pointer;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV ._3Iet {
+  display: flex;
+  width: 100%;
+  border-radius: 4px;
+  align-items: stretch;
+  border: 1px solid transparent;
+  background-color: #fff;
+  border-color: #e5ebee;
+  color: #324c5b;
+  transition: all 0.2s ease-in-out;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV ._3Iet:hover {
+  border-color: #bbcdd8;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV ._3Iet ._2ieP {
+  display: flex;
+  align-items: stretch;
+  width: 100%;
+  flex-grow: 1;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV ._3Iet ._2ieP ._1mYU {
+  width: 100%;
+  padding: 0 8px;
+  background-color: transparent;
+  border: none;
+  font-size: 14px;
+  height: 36px;
+  outline: none;
+  line-height: 36px;
+  transition: color 0.2s ease-in-out;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV ._3Iet ._2ieP input[type=number]::-webkit-inner-spin-button,
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form .iLEV ._3Iet ._2ieP input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form ._3SdL._2_oj.oiDm {
+  background-color: #12c48b;
+  box-shadow: 0 5px 6px 0 rgba(17, 195, 139, 0.32);
+  margin-top: 20px;
+  color: #fff;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  display: block;
+  height: 34px;
+  line-height: 34px;
+  width: 100%;
+  padding: 0 8px;
+  border-radius: 4px;
+  text-align: center;
+  text-decoration: none;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  border: none;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o .jcQj._2Xou ._1KCh form ._3SdL._2_oj.oiDm:disabled {
+  background-color: #e5ebee;
+  color: #7b93a4;
+  box-shadow: none;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o ._2XTe {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  pointer-events: none;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.6);
+  z-index: 800;
+  width: 100vw;
+  transition: opacity 0.3s;
+}
+._2AsN section .oTaE .LB4I ._3fS2.o-cw._1ubS._1B3o ._2XTe._2Gxn {
+  opacity: 0.6;
+  pointer-events: all;
+}
 
 .UzPn._10vh {
   position: -webkit-sticky;
